--- a/fonts.css
+++ b/fonts.css
@@ -3,3 +3,9 @@ body{
     font-family: 'Abril Fatface', cursive;
 
 }
+h1{
+    text-decoration: black solid underline;
+}
+p{
+    text-align: justify;
+}
